# resultmofstructure

./: README.md  pyproject.toml
resultmofstructure/analysis/: rmsd.py
resultmofstructure/io/: ams_to_json.py  coordlibrary.py  filetyper.py
