[tool.poetry]
name = "resultmofstructure"
version = "0.1.0"
description = ""
authors = ["bafgreat <75862753+bafgreat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
read-rkf = "^0.1.0"
mofstructure = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
